# Credifiel

./: .gitignore  Inicio.py  ProcesadoYLimpieza Test.ipynb  ProcesadoYLimpieza.ipynb  model.ipynb  pyproject.toml
.streamlit/: config.toml
data/: CatRespuestaBancos.csv  EmisoraBancoPrecios.csv  credits.csv
data/uploads/: datos_crudos_20250525_093948.csv  datos_crudos_20250525_100717.csv
optimizer/: process.py
pages/: 1_Assignment.py  1_Conectar.py  1_Reentrenar_Modelo.py  2_Asignar.py  2_Sube_Datos.py  3_Reporte_Post_Mortem.py
processing/: 2025Test.parquet  preprocess_data.py  process.py
processing/modelOut/: emisora_1.parquet  emisora_10.parquet  emisora_11.parquet  emisora_12.parquet  emisora_13.parquet  emisora_14.parquet  emisora_15.parquet  emisora_16.parquet  emisora_17.parquet  emisora_18.parquet  emisora_19.parquet  emisora_2.parquet  emisora_20.parquet  emisora_21.parquet  emisora_22.parquet  emisora_23.parquet  emisora_24.parquet  emisora_25.parquet  emisora_3.parquet  emisora_4.parquet  emisora_5.parquet  emisora_6.parquet  emisora_9.parquet
