[project]
name = "credifiel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
]
